--- a/TODO
+++ b/TODO
@@ -1,26 +1,36 @@
-
 Thesis Checklist:
   High Priority:
     ☐ latency evaluation
     ☐ baseline metrics:
       ☐ figure out haptic fastest response limit (touch sensitivity number)
-      ☐ figure out auditory fastest response limit
-      ☐ as extra, mention visual as well
+      ✔ figure out auditory fastest response limit @done(18-06-13 13:43)
+        Regarding tones, 100msec limit before tones blur together
+        Lower limit (fastest possible):
+          ITI = 175 msec = 343 bpm or 6 taps/sec
+        Upper limit:
+          IOI > 1.8s = 3.33 bpm
+      ✔ as extra, mention visual as well @done(18-06-13 13:43)
+        Lower limit:
+          IOI of 460msec = 130 bpm
     ☐ start developing presentation slides
       ☐ target time = 30 minutes
-    ☐ look into more effective haptics?
     ☐ test more people out!
+    ☐ build another proto for Gus
   Data:
-    ☐ Plot of haptic vs. audible performance 
-      ☐ across group categories
-      ☐ across instrument categories
+    ✔ Plot of haptic vs. audible performance @done(18-06-13 13:32)
+      ✔ across group categories @done(18-06-13 13:32)
+      ✔ across instrument categories @done(18-06-13 13:32)
     ✔ Judy data @done(18-06-05 21:13)
       ✔ convert Judy to User ID @done(18-06-05 21:13)
-      ☐ merge Judy/Alex into Combo
-    ☐ read up on stats
+      ✔ merge Judy/Alex into Combo @done(18-06-13 13:32)
+    ✔ read up on stats @done(18-06-13 13:32)
+    ☐ delta plots @started(18-06-13 13:37)
+    ☐ read another paper 
   Writing:
     ☐ migrate thesis sections to appendix
     ☐ start data analysis section
     ☐ revise abstract
+    ☐ Garrett's corrections
+    ☐ Mom's corrections
     ☐ write conclusion
     ☐ trim the fat!
