--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -6,10 +6,10 @@
 
 \noindent
 
-The following work is an expansion of sensorimotor synchronization research. It provides an evaluation of the intervening space between the beat as it applies to the modalities of touch and sound. The crux of the experiment is a tap test comparison of continuous and discrete impulses over static (isochronous) and dynamic (non-isochronous) intervals. Time based response metrics of a wearable haptic are contrasted to a suite of audible tests. Though vast evidence promotes auditory an advantage in guiding rhythmic accuracy and low asynchrony, this work hypothesizes that there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi, where space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
+The following work is an expansion of sensorimotor synchronization research. It provides an evaluation of the intervening space between the beat as it applies to the modalities of touch and sound. The crux of the experiment is a tap test comparison of continuous and discrete impulses over static (isochronous) and dynamic (non-isochronous) intervals. Time based response metrics of a wearable haptic are contrasted to a suite of audible tests. Though vast evidence promotes auditory an advantage in guiding rhythmic accuracy and low asynchrony, this work hypothesizes that there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi where space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
 
 The analysis over 10 individuals, professional and amateur/non-musicians resulted in 
 
 \todo[inline]{add experiment results brief overview}
 
-The overarching goal is to inform validity and design of a haptic wearable which seeks to supplant the traditional metronome experience in providing a meaningful gestural system. Though primarily invaluable towards future entrainment studies in expressive performance, the work holds extra-musical value for stroke gait rehabilitation practice, Parkinson's patients, and military based navigational applications.
+The overarching goal is to inform validity and design of a haptic wearable which seeks to supplant the traditional metronome experience in providing a meaningful gestural system. The work holds value towards future entrainment studies in expressive performance but can be expanded to include extra-musical applications via stroke gait rehabilitation practice, Parkinson's patients, and military based navigational applications.
