--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -16,14 +16,14 @@ While it is clear that nearly every professional musician has honed technique ov
 
 Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with elasticity and musical expression.
 
-Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However, the pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
+Is there missing information from the daily practice of a trained musician to an audible metronome? In a traditional sense, the audible click of the metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. The pendulum motion exhibited also seeks to convey meaningful rhythmic information with the space it occupies in the visual modality, much like the gestural motion of a conductor. Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
 \section{Background}
 Humans have an innate ability to not only notice periodic movement, but to mimic and adapt to changes in their environment \cite{clayton2005time}. The extent of these capacities can be expanded through training which consists of recognizing, retaining, analyzing, and reproducing rhythms \cite{holland2010feeling}. The results of which can hold extra-musical impact as rhythmic stability finds important applications in everyday life.
 
-The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. A student's hands might, for example, be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
+The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze in the early 1900's to integrate natural musical expression via movement \cite{jaques1930eurhythmics}. Through a series of exercises the instructor ushers his students to coordinate movement to varying levels of rhythmic push and pull. For example, a student's hands might be conducting a subdivision heard in the melody while simultaneously walking in coordination to the fundamental pulse played in the harmony. A sense of constant forward motion pervades the actions of the student allowing an embodiment of continuity which seeks to permeate all elements of musicality development.
 
-From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis} (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
+From nearly two decades of work as a licensed Dalcroze instructor at Carnegie Mellon University, Professor Stephen Neely has implemented these techniques. His current research in design seeks to further explore the interstitial. In doing so he imparts an inquiry as to what is gained in attempting to fill the space between the \textit{crusis} (click moment of the beat) with a natural analog wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor.
 
 \section{Sensorimotor synchronization}
 Research surrounding the psychology of rhythmic perception is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
@@ -32,9 +32,7 @@ What follows is a brief overview of SMS. Critical terminology is defined \ref{SM
 
 \subsection{Terminology} \label{SMSTerms}
 The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. Within the context of this work it shall be defined as:
-\begin{equation*}
-    Tap Onset-True Onset
-\end{equation*} 
+\begin{equation*}Tap Onset-True Onset\end{equation*} 
 
 The mean of this asynchrony is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchonies within the shortest reaction time window (150 ms) are arguably an anticipation of the preceeding stimuli. 
 
@@ -56,38 +54,38 @@ Studies predominantly rely on a MIDI based (drum pad) instrument to register tap
 
 Both \textit{FTAP} and \textit{MatTap} were viable options for this work but ultimately deemed either outmoded, lacking high baudrate (115200) hardware support for haptic integration over serial, or incompatible with the system architecture in use \textit{(OSX 10.11.6 2.6GHz Intel I7)}.
 
-In a novel high-precision/low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Latency between tap and auditory feedback was minimized with a mean of 0.6ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
+In a novel high-precision, low-latency approach by Prof. Schultz in 2015 at the University of Montreal \cite{schultz2016tap}, an Arduino force sensitive resistor (FSR) based tap mechanism was constructed. Latency between tap and auditory feedback was minimized with a mean of 0.6ms (SD = 0.3). The results also demonstrated the reliability of the FSR in recording fewer superfluous taps as well as fewer missed taps.
 It was inevitably decided to construct a custom software suite to fit the test needs of the project as discussed in Section \ref{development} which provided a round-trip latency of 
 \todo[inline]{Add latency metric here}
 as shown in \ref{latencyCalc}.
 
 \subsection{Expectations} \label{SMSFindings}
-SMS research has given key insight to the expectations which inform the data analysis conducted in \ref{DataAnalysis}.
+SMS research has given key insight to the expectations which inform the data analysis conducted in Chapter \ref{DataAnalysis}.
 
 \subsubsection{Variability}
-The variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians (no prior musical exposure). In an isochronous test with IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
+The variability $(SD_{asy})$ is generally lower in professional musicians than non-musicians (no prior musical exposure). In an isochronous test with an IOI of 500ms, surprisingly no difference in $(SD_{asy})$ was found between amateurs and non-musicians \ref{repp2013sensorimotor}. From this study it is safe to assume the data analysis of this work will be grouped into professionals vs. (non-musicians and amateurs).
 
 Percussionists and pianists had the lowest ITI of all musicians. This might imply that a high level of rhythmic expertise reduces variability of tapping, but due to the percussive nature of the instrument becomes hard to determine. Furthermore, as the duration of the IOI increases, $(SD_{asy})$ increased in a non linear fashion. 
 
 When professionals migrated away from the tap test and instead used their native instruments, the results were greatly improved. It was reported by Stoklasa, Liebermann, and Fischinger in a paper presented at the Music Perception and Cognition in 2012 that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA ($–2 ms$), unlike their tapping results ($-13 ms$) \cite{repp2013sensorimotor}.
 
 \subsubsection{Negative Mean Asynchrony}
-The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. As opposed to steady or isochronous patterns, it was found that nonisochronous tapping introduces distortions within the ITI; affecting local asynchronies but the global NMA remained persistant \cite{polak2016both}.
+The NMA is typically smaller for musicians and remains relatively constant throughout a changing IOI. A linear increase in NMA as the IOI increases can be expected from non-musicians \cite{repp2013sensorimotor}. It was found that nonisochronous tapping introduces distortions within the ITI as opposed to steady or isochronous patterns. This had a tendency to affect local asynchronies but the global NMA remained persistant \cite{polak2016both}.
  
-As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
+As a counter to the proposed hypothesis, Bialunkska et al. argued that the reason for a negative mean asynchrony was due to faster sensory accumulation from the auditory and visual modalities than from tactile feedback received from taps \cite{bialunska2011increasing}. The expectation was thus a dependence of the sensory accumulation rate to the stimulus intensity. This was later found to be uncorrelated \cite{bialunska2011increasing}.
 
 A positive mean asynchrony is expected as the IOI approaches the biomechanical limit of execution as discovered by Krause, Pollok, and Schnitzler in 2010 \cite{krause2010perception}.
 
-\subsubsection{Auditory Dominance}
-SMS research historically identifies what is known as an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in Section \ref{AudAdv}. However, recent studies have proven that given meaningful spatiotemporal information (as in the bouncing ball example discussed in \ref{visualMet}) synchronization is almost as good as an auditory metronome.
+\subsubsection{Auditory Dominance in SMS}
+SMS research historically identifies what is known as an auditory advantage, or the dominance of the auditory motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in Section \ref{AudAdv}. Recent studies have proven that given meaningful spatiotemporal information (as in the bouncing ball example discussed in \ref{visualMet}) synchronization is almost as good as an auditory metronome.
 
 \subsection{Rate Limits} \label{rateLimits}
 In order to impose valid constraints on the tests carried out in this work, it is important to understand the SMS rate limits. 
 
-According to experiments done by Keele, Pokorny, Corcos, and Ivry, in 1985, the calculation for the fastest absolute response time possible for a tap based test can be divided into either that of perception or motor speed (also known as the biomechanical limit) \cite{keele1985perception}. It was shown that the biomechanical finger tap limit is between the 5-7Hz range (150-200ms) \cite{repp2006rate}.
+According to experiments done by Keele, Pokorny, Corcos, and Ivry, in 1985, the calculation for the fastest absolute response time possible for a tap based test can be divided into either that of perception or motor speed, also known as the biomechanical limit \cite{keele1985perception}. It was shown that the biomechanical finger tap limit is between the 5 - 7 Hz range, or a period of 150 - 200ms \cite{repp2006rate}.
 
-When discussing a perceptual basis, SMS tests are valid within a particular temporal range. For audio based tests, where 1 in every 4 beats was tapped, an upper rate limit was shown to be as high as 8-10Hz (100-125ms). Visual stimuli was found to be less than 2.5Hz (400ms). The lower rate limit was independent of modality and found to be 0.56Hz (1800ms) \cite{repp2006rate}. 
+When discussing a perceptual basis, SMS tests are valid within a particular temporal range. For audio based tests, where 1 in every 4 beats was tapped, an upper rate limit was shown to be as high as 8 - 10 Hz, or a period of 100 - 125 ms. Visual stimuli was found to be less than 2.5 Hz, or 400ms. The lower rate limit was independent of modality and found to be 0.56 Hz, or 1800 ms \cite{repp2006rate}. 
 
-In order to establish a middle ground and determine a fair and effective IOI window across musicians and non-musicians, this work has chosen to focus on tempi ranging from 45-180 (333-1333ms).
+In order to establish a middle ground and determine a fair and effective IOI window across musicians and non-musicians, this work has chosen to focus on tempi ranging from 45-180 bpm, or a period of 333 - 1333 ms.
 
-The haptic design section which follows (\ref{hapticConsiderations})discusses the rate limits of the touch modality.
+The haptic design section \ref{hapticConsiderations} discusses the rate limits of the touch modality.
