--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,9 +1,9 @@
 \chapter{Previous Work}
 
-This chapter begins with a few SMS topics which attempt to debunk what is known as the Auditory Advantage \ref{AudAdv}. From there, three specific research projects are discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
+This chapter begins with a few SMS topics which attempt to debunk what is known as the auditory advantage \ref{AudAdv}. From there, three specific research projects are discussed, each directly informing design of the haptic built for this project: the haptic drum kit \ref{HD}, vibrotactile metronome \ref{vibrotactileMetronome}, and the continuous visual metronome \ref{visualMet}. To conclude, \ref{commercial} grants a brief insight towards commercially realized products relevant to the field.
 
 \section{Auditory Advantage} \label{AudAdv}
-Most SMS research leans toward the notion of a distinct advantage from the discretely timed auditory stimulus, implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. However, the following examples are proponents supporting the hypothesis of this work, predominantly involving the relatively new tactile field.
+Most SMS research leans toward the notion of a distinct advantage from the discretely timed auditory stimulus, implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. The following examples are proponents supporting the hypothesis of this work, predominantly involving the relatively new tactile field.
 
 \subsection{Multisensory Cues}
 Maintaining synchrony with a periodic event requires that the central nervous system (CNS) compensate for timing variation arising from sensory, decision and motor processing noise. Keeping in time with a pacing source (metronome) requires continual corrections based on the timing error (asynchrony) between the metronome and performed actions. The CNS can alternate between cues depending on the demand of the task or combine info from different senses. In the context of rhythmic cues the brain will weigh signals according to the relative reliability in the timing of the events across modalities, ensuring optimal movement production to the underlying event extracted from the signals. 
@@ -11,7 +11,7 @@ Maintaining synchrony with a periodic event requires that the central nervous sy
 In an experiment carried out by Elliott in 2010, it was discovered that the variability of asynchrony for unimodal tactile cues was lower than for the visual metronome (F1,9 = 6.929, P = 0.027) and only slightly higher than that for unimodal auditory cues \cite{elliott2010multisensory}.
 
 \subsection{The Tactile Modality} \label{tactileModality}
-A 2016 study by the Department of Psychology at Ryerson University considered whether the auditory advantage persisted across the tactile modality. The experiment was a tap test of non musicians put through a series of simple and complex rhythmic sequences with a varied area of haptic stimulation. In conditions involving a large area of stimulation and simple rhythmic sequences, tactile synchronization closely matched auditory. They proved that if made salient enough, “the accuracy of synchronization to a tactile metronome can equal synchronization to an auditory metronome, further challenging the idea of an auditory advantage over all other modalities for synchronization to discretely timed rhythmic stimuli.” However, auditory won out for synchronization of complex rhythmic sequences \cite{ammirante2016synchronizing}.
+A 2016 study by the Department of Psychology at Ryerson University considered whether the auditory advantage persisted across the tactile modality \cite{ammirante2016synchronizing}. The experiment was a tap test of non musicians put through a series of simple and complex rhythmic sequences with a varied area of haptic stimulation. In conditions involving a large area of stimulation and simple rhythmic sequences, tactile synchronization closely matched auditory. They proved that if made salient enough, “the accuracy of synchronization to a tactile metronome can equal synchronization to an auditory metronome, further challenging the idea of an auditory advantage over all other modalities for synchronization to discretely timed rhythmic stimuli.” However, auditory won out for synchronization of complex rhythmic sequences.
 
 \section{Haptic Drumkit} \label{HD}
 In 2010, a group at the Open University designed a haptic which would enable a drummer to learn multi-limb coordination with the broader goal of polyrhythmic entrainment. They too adopted Dalcroze entrainment theories for guiding human rhythm perception. 
@@ -20,7 +20,7 @@ Four haptics were worn on the wrists and ankles of five participants. Each hapti
 
 In a user survey following the tests, it was mentioned that the haptic guidance felt intimate. The users appreciated not having to work out the division of labor like one would with the audible modality. However, the drummming had a tendency to drown out the vibrotactile signal and the attack was seemingly blurred as the haptics reached higher tempo. 
 
-It was found that a haptic had to be on for a minimum of 50ms in order to be felt completely. Furthermore, a minimum gap of 50ms would have to be in between each pulse in order for two pulses to feel distinct. Another frequent request was to reposition to just the arms or to have the option to disable the ankles as it was found to be very difficult to feel on the lower limbs.
+It was found that a haptic had to be on for a minimum of 50 ms in order to be felt completely. Furthermore, a minimum gap of 50 ms would have to be in between each pulse in order for two pulses to feel distinct. Another frequent request was to reposition to just the arms or to have the option to disable the ankles as it was found to be very difficult to feel on the lower limbs.
 
 This research gave insight into training with haptic stimuli alone, and is a strong proponent for utilization of the touch modality within the context of Dalcroze training. Throughout their research an important distinction was made between stimulus response and fostering entrainment. It was found that a more optimal solution in the future would promote more of a proactive rather than reactionary response. Further, replacement of the vibrotactile with a tactor in the next revision promoted a cleaner signal with wider dynamic range and finer temporal resolution.
 
@@ -31,7 +31,7 @@ The work has some fascinating parallels to this project and has granted some ver
 
 His guide for design requirements was the director and conductor of the contemporary music ensemble, Professor Guillaume Bourgogne. He gave Patrick the constraint that the pulses should feel continuous and not discrete, even mentioning a pendulum motion as the descriptive feeling. Furthermore, the pulses peak amplitude had to line up with the audio track. To synchronize with the audio click he triggered the haptic pulse midway between two audio clicks.
 
-The haptic design consisted of two ERM’s and one pager buzzer. A transmitter was connected to a PC running Max. Real-time audio analysis of the incoming signal was completed using the bonk~ object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device.
+The haptic design consisted of two ERM’s and one pager buzzer. A transmitter was connected to a PC running the visual programming language Max. Real-time audio analysis of the incoming signal was completed using the bonk~ object to find downbeats. This triggered the generation of the vibrotactile envelope signal and a control message was transmitted to the device.
 
 An interesting addition to SMS research was the redefining of the Inter-Onset Interval as half previous IOI (rise time) + half nexts IOI (decay time) in what is claimed as more precision to accommodate varying pulse lengths.
 
@@ -47,3 +47,6 @@ Though stability of beat synchronization to discrete visual modalities (a flash 
 The Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically” \cite{Peterson}.
 
 The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click” \cite{Soundbrenner}.
+
+\section{Summary}
+This is how these works tie into what I'm doing.
